2008-06-17  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/LegendItem.java
    (labelFont): New field,
    (labelPaint): Likewise,
    (getLabelFont): New method,
    (setLabelFont): Likewise,
    (getLabelPaint): Likewise,
    (setLabelPaint): Likewise,
    (setFillPaint): Likewise,
    (setLinePaint): Likewise,
    (setOutlinePaint): Likewise,
    (equals): Test new fields,
    (writeObject): Handle new field,
    (readObject): Likewise,
    * source/org/jfree/chart/renderer/AbstractRenderer.java
    (legendShape): New field,
    (baseLegendShape): Likewise,
    (legendTextFont): Likewise,
    (baseLegendTextFont): Likewise,
    (legendTextPaint): Likewise,
    (baseLegendTextPaint): Likewise,
    (AbstractRenderer): Initialise new fields,
    (lookupLegendShape): New method,
    (getLegendShape): Likewise,
    (setLegendShape): Likewise,
    (getBaseLegendShape): Likewise,
    (setBaseLegendShape): Likewise,
    (lookupLegendTextFont): Likewise,
    (getLegendTextFont): Likewise,
    (setLegendTextFont): Likewise,
    (getBaseLegendTextFont): Likewise,
    (setBaseLegendTextFont): Likewise,
    (lookupLegendTextPaint): Likewise,
    (getLegendTextPaint): Likewise,
    (setLegendTextPaint): Likewise,
    (getBaseLegendTextPaint): Likewise,
    (setBaseLegendTextPaint): Likewise,
    (equals): Handle new fields,
    (clone): Likewise,
    (writeObject): Likewise,
    (readObject): Likewise,
    * source/org/jfree/chart/renderer/category/AbstractCategoryItemRenderer.java,
    * source/org/jfree/chart/renderer/category/AreaRenderer.java,
    * source/org/jfree/chart/renderer/category/BarRenderer.java,
    * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java,
    * source/org/jfree/chart/renderer/category/CategoryStepRenderer.java,
    * source/org/jfree/chart/renderer/category/LineAndShapeRenderer.java,
    * source/org/jfree/chart/renderer/category/ScatterRenderer.java,