@@ -1,3 +1,15 @@
+2008-06-18  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/annotations/XYDrawableAnnotation.java
+    (drawScaleFactor): New field,
+    (width): Renamed displayWidth,
+    (height): Renamed displayHeight,
+    (XYDrawableAnnotation(double, double, double, double, double, Drawable)): 
+    New constructor,
+    (draw): Apply scaling transform,
+    (equals): Check drawScaleFactor field,
+    (hashCode): Updated for renamed fields.
+
 2008-06-17  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/LegendItem.java
